[build-system]
requires =
    setuptools>=42
    wheel
build-backend = "setuptools.build_meta"

[coverage:run]
source = .
omit =
    setup.py
    examples/*
    .virtualenv/

[flake8]
exclude = .git,.idea,__pycache__,.eggs,build,dist,*.egg-info,.github,.virtualenv
max-complexity = 10
max-line-length = 120
